Fixing UI layout issue with Supported Devices page

--- a/Resources/css/main.css
+++ b/Resources/css/main.css
@@ -453,8 +453,7 @@ iframe.maker-kit {
 }
 
 .comparison-picture {
-    width: 324px;
-    height: 231px;
+    width: 320px;
 }
 
 .subtext {
